infra-k8s/kuma/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuma-forum-api
  namespace: lab
spec:
  ports:
  - name: kuma-forum-api
    port: 3001
    protocol: TCP
    targetPort: 3001
  type: LoadBalancer
  selector:
    app: kuma
