infra-k8s/kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma-forum-api
  namespace: lab
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: kuma.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuma-forum-api
                port:
                  number: 3001
